--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 
-   
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr">
+   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 
     <title>Jonas Schmid - SCHMID.PRO</title>
     <link rel="stylesheet" href="./style.css" type="text/css" media="screen">
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
@@ -45,7 +46,7 @@
       </div>
     </div>
   	<div id="download-vcard">
-  	  <a href="http://jonas.schmid.pro/resume_jonas_schmid.pdf" class="button blue">Download my resume</a>
+  	  <a href="./resume_jonas_schmid.pdf" class="button blue">Download my resume</a>
   	</div>
     </div>
 </body>
