--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<footer>
 							<ul class="icons">
 								<li><a href="https://twitter.com/jonas_schmid" class="fa-twitter">Twitter</a></li>
-								<li><a href="https://mastodon.social/@jschmid" class="fa-comments"rel="me" >Mastodon</a></li>
+								<li><a href="https://mastodon.social/@jschmid" class="fa-users"rel="me" >Mastodon</a></li>
 								<li><a href="https://github.com/jschmid" class="fa-github">Github</a></li>
 								<li><a href="https://www.linkedin.com/in/jonasschmid/" class="fa-linkedin">LinkedIn</a></li>
 								<li><a href="./resume_jonas_schmid.pdf" class="fa-file-text">Résumé</a></li>
